--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod && node server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --prod",
-    "watchbuild": "ng build --watch --prod",
+    "watch": "ng build --watch --prod",
     "devserver": "ng serve"
   },
   "private": true,
